--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ footer {
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-#teamhero{
+#team{
     height: 300px;
     background-image: url(baseballteam.jpg);
     background-repeat: no-repeat;
