Refactor styles.css for improved structure and clarity

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ footer {
 #contact {
     font-size: 90%;
 }
-#homehero{
+#general{
     height: 300px;
     background-image: url(baseball.jpg);
     background-repeat: no-repeat;
