--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,8 @@ footer {
             flex-direction: column;
             padding-top: 1em;
         }
-        .hero {
-            grid-area: hero;
+         .general{
+            grid-area: general;
         }
         header {
             grid-area: header;
@@ -187,7 +187,7 @@ footer {
         #wrapper {
             display: grid;
             grid-template: "header header"
-                            "nav hero"
+                            "nav general"
                             "nav main"
                             "nav footer"
                             / 180px 1fr;
